src/objects/JWS_TargetProduct__c.object
<CustomObject>
    <fields>
        <fullName>CampaignRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>企画申請</label>
        <referenceTo>JWS_CampaignRequest__c</referenceTo>
        <relationshipLabel>対象製品</relationshipLabel>
        <relationshipName>CampaignRequest_TP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ItemCD__c</fullName>
        <label>製品コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemNO__c</fullName>
        <label>製品NO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeClassificationCD__c</fullName>
        <label>大分類コード</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeClassificationNO__c</fullName>
        <label>大分類NO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeClassification__c</fullName>
        <label>大分類</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleClassificationCD__c</fullName>
        <label>中分類コード</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleClassificationNO__c</fullName>
        <label>中分類NO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleClassification__c</fullName>
        <label>中分類</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing__c</fullName>
        <label>包装</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <formula>CampaignRequest__r.ID_Size18__c &amp;  LargeClassificationNO__c &amp; MiddleClassificationNO__c &amp; ItemNO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort</label>
        <type>Text</type>
    </fields>
    <label>JWS_TargetProduct</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JWSTP-{0000}</displayFormat>
        <label>対象製品No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JWS_TargetProduct</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>